refactor(example): uses typescript
Refactors to typescript to show the validity of types for @casl/* packages: https://github.com/stalniy/casl/issues/136

--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "CASL and mongoose example",
   "main": "index.js",
   "dependencies": {
-    "@casl/ability": "^2.3.0",
-    "@casl/mongoose": "^2.1.1",
+    "@casl/ability": "^2.5.1",
+    "@casl/mongoose": "^2.2.2",
+    "@types/lodash": "^4.14.119",
     "lodash": "^4.17.10",
-    "mongoose": "^5.1.7"
+    "mongoose": "^5.4.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p tsconfig.json",
+    "dev": "ts-node index.ts"
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,10 @@
   "bugs": {
     "url": "https://github.com/stalniy/casl-mongoose-example/issues"
   },
-  "homepage": "https://github.com/stalniy/casl-mongoose-example#readme"
+  "homepage": "https://github.com/stalniy/casl-mongoose-example#readme",
+  "devDependencies": {
+    "@types/mongoose": "^5.3.5",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.2.2"
+  }
 }
